--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -214,25 +214,25 @@ The most popular micro-blogging service is Twitter. The popularity of Twitter st
 
 Monitoring and analysing this rich and continuous flow of user-generated content can yield unprecedentedly valuable information, which would not have been available from traditional media outlets. Tweets can be seen as a dynamic source of information enabling individuals, corporations, and government organizations to stay informed of "what is happening now." For instance, people would be interested in getting advice, opinions, facts, or updates on news or events\cite{petrovic2010streaming}. Companies are increasingly using Twitter to advertise and recommend products, brands, and services; to build and maintain reputations; to analyse users' sentiment regarding their products (or those of their competitors); to respond to customers' complaints; and to improve decision making and business intelligence. Twitter has also emerged as a fast communication channel for gathering and spreading breaking news, for predicting election results, and for sharing political events and conversations. It has also become an important analytical tool for crime prediction and monitoring terrorist activities.
 
-Twitter promotes an attractive style stating breaking news, as there is very little lag\cite{Sankaranarayanan2009TwitterStandNI} between the time that an event happens or is first reported in the news media and the time at which it is the subject of a posting on Twitter. Twitter can be characterized as an endless database, which collects millions of real-time short text messages every second. Tweets also have a mechanism by which the user can link to other objects on the web such as articles, images or videos which is typically used to link tweets to related material on the Internet. Thereafter, the first result is that the size of information is multiplied and the variety of references is bigger, as well. These messages are not only just data, but they can be manipulated efficiently. One well-timed subject of research is to use those messages for event detection. In other words, the tweets is a source of inventing which topics are more seasonable. Event detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases.
+Twitter promotes an attractive style stating breaking news, as there is very little lag\cite{Sankaranarayanan2009TwitterStandNI} between the time that an event happens or is first reported in the news media and the time at which it is the subject of a posting on Twitter. Twitter can be characterized as an endless database, which collects millions of real-time short text messages every second. Tweets also have a mechanism by which the user can link to other objects on the web such as articles, images or videos which is typically used to link tweets to related material on the Internet. Thereafter, the first result is that the size of information is multiplied and the variety of references is bigger, as well. These messages are not only just data, but they can be manipulated efficiently. One well-timed subject of research is to use those messages for event detection. In other words, the tweets is a source of inventing which topics are more seasonable. Event detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases. 
 
-With the passage of time and the effect of more and more users the topic acquire much popularity. Through this phenomenon we can form a general summarization of the event. This process is called event summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information. Twitter has shown its powerful ability in information delivery in many events, like the wildfires in San Diego and the earthquake in Japan \cite{gao2013sequential}. In response to searches for ongoing events, today's major search engines simply find tweets that match the query terms, and present the most recent ones. This approach has the advantage of leveraging existing query matching technologies, and for simple one-shot events such as earthquakes it works well. However, for events that have "structure" or are long-running, and where users are likely to want a summary of all occurrences so far, this approach is often unsatisfactory.
-\par
+With the passage of time and the effect of more and more users the topic acquire much popularity. Through this phenomenon we can form a general summarization of the event. This process is called event summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information. Twitter has shown its powerful ability in information delivery in many events, like the wildfires in San Diego and the earthquake in Japan\cite{gao2013sequential}. In response to searches for ongoing events, today's major search engines simply find tweets that match the query terms, and present the most recent ones. This approach has the advantage of leveraging existing query matching technologies, and for simple one-shot events such as earthquakes it works well. However, for events that have "structure" or are long-running, and where users are likely to want a summary of all occurrences so far, this approach is often unsatisfactory.
+
 Event detection is a growing domain of research. Many different species of algorithms have been detected regarding this sector. A common approach are techniques that are based on text categorization. In addition, there are some methods that reclaim the display frequency of each term.
 
 The computational treatment of sentiment has recently attracted a great deal of attention, in part because of its potential applications. One of the main reasons for sentiment analysis is the aforementioned increase of user-generated content on the Web which has resulted in a wealth of information that is potentially of vital importance to institutions and companies. Typically, document-based sentiment analysis processes operate at a particular level, i.e. at the word or sentence level, for extracting a document's sentiment. In machine learning, the most popular approach for sentiment analysis, the selection of appropriate features for representing a document is crucial. In sentiment identification at the word level different types of features have been introduced, which are either sentiment-based (e.g. words which express a specific sentiment), syntactic-based (e.g. part-of-speech and n-grams)\cite{chatzakou2015multispot}, or semantic-based (e.g. semantic word vector spaces which capture the meaning of each word).
 
-Document-level polarity classification is not a special case of text categorization with sentiment -rather than topic- based categories. Hence, standard machine learning classification techniques, such as support vector machines (SVMs), can be applied to the entire documents themselves. Nevertheless, some researches presented a technique that it is easy to improve the accuracy, by integrating sentence-level subjectivity detection with document-level sentiment polarity.
+Document-level polarity classification is not a special case of text categorization with sentiment -rather than topic- based categories. Hence, standard machine learning classification techniques, such as support vector machines (SVMs)\cite{pang2004sentimental}, can be applied to the entire documents themselves. Nevertheless, some researches presented a technique that it is easy to improve the accuracy, by integrating sentence-level subjectivity detection with document-level sentiment polarity.
 
-As we know, in the machine learning approach, each classifier is trained using a collection of representative data. In contrast, the semantic-orientation approach does not require prior training; instead, it measures a word containing positive or negative sentiment. Each approach has its own benefits and drawbacks. For example, the machine learning approach tends to be more accurate, but the semantic-orientation approach has better generality. Recently, a new lexicon-enhanced method was accrued to generate a set of sentiment words based on a sentiment lexicon as a new feature dimension. It combines these sentiment features with content-free and content-specific features used in the existing machine-learning approach. In the evaluation stage, they showed that adding the new set of sentiment features can increase sentiment-classification performance.
+As we know, in the machine learning approach, each classifier is trained using a collection of representative data. In contrast, the semantic-orientation approach does not require prior training; instead, it measures a word containing positive or negative sentiment. Each approach has its own benefits and drawbacks. For example, the machine learning approach tends to be more accurate, but the semantic-orientation approach has better generality\cite{dang2010lexicon}. Recently, a new lexicon-enhanced method was accrued to generate a set of sentiment words based on a sentiment lexicon as a new feature dimension. It combines these sentiment features with content-free and content-specific features used in the existing machine-learning approach. In the evaluation stage, they showed that adding the new set of sentiment features can increase sentiment-classification performance.
 
 The Internet and other communication technologies play a potentially disruptive role on the constraints imposed on social networks. These technologies reduce the overhead and cost for being introduced to new people regardless of geography, and help us stay in touch with those we know. Some have even gone so far as to call this "the end of geography", where the process of relationship formation becomes disentangled from distance altogether.
 
 However, geography still plays an important role. The reason is because of the strong relationship between event detection and geographical location each user belongs. Twitter is a social networking website, which means that users need not be viewed in isolation, but instead can be viewed as part of a large network of other users, user groups, and user cliques. Moreover, users have some meta-data information, such as description, source location, friends, which means that the social network structure in Twitter can aid in finding users that are most likely to tweet about news belonging to a particular geographic location or region.
 
-The rise of micro-blogging services spurred various applications to mine the data coming from those services. Many such applications could benefit from information about the location of users, but unfortunately location information is currently very sparse. The main problem is that less than 1 per cent of tweets are geo-tagged and information available from the location field in users' profiles is unreliable at best. The benefits of mining those data promises new personalized information services, including local news summarized from tweets of nearby Twitter users, the targeting of regional advertisements, spreading business information to local customers, and novel location-based applications (e.g., Twitter-based earthquake detection, which can be faster than through traditional official channels).
+The rise of micro-blogging services spurred various applications to mine the data coming from those services\cite{mahmud2012tweet}. Many such applications could benefit from information about the location of users, but unfortunately location information is currently very sparse. The main problem is that less than 1 per cent of tweets are geo-tagged and information available from the location field in users' profiles is unreliable at best. The benefits of mining those data promises new personalized information services, including local news summarized from tweets of nearby Twitter users, the targeting of regional advertisements, spreading business information to local customers, and novel location-based applications (e.g., Twitter-based earthquake detection, which can be faster than through traditional official channels).
 
-There is a great number of geoinference using social networks One direction has produced approaches that claim to accurately locate the majority of posts within tens of kilometres of their true locations. Another method predicts the location of an individual from a sparse set of located users with peformance that exceeds IP-based geolocation. On the side, there is also a technique that predicts locations of Twitter users at different granularities, such as city, state, or time zone, using the content of their tweets and their tweeting behaviour.
+There is a great number of geoinference using social networks One direction has produced approaches that claim to accurately locate the majority of posts within tens of kilometres of their true locations\cite{BoHanPaulCook}. Another method predicts the location of an individual from a sparse set of located users with peformance that exceeds IP-based geolocation. On the side, there is also a technique that predicts locations of Twitter users at different granularities, such as city, state, or time zone, using the content of their tweets and their tweeting behaviour.
 
 Getting started the first section of this survey is the presentation of some techniques that aim to event detection. The survey detects both algorithms that are based on text categorization and frequency display methods. The second chapter deals with techniques of sentiment analysis. We give more weight on techniques that use machine learning. The last chapter unfolds methods for location identification.
 
@@ -400,13 +400,13 @@ Social media provides a continuously-updated stream of data which has proven use
 
 \subsection{Prediction at Different Granularities}
 
-A number of different kind of techniques have been recently proposed. \cite{mahmud2012tweet} proposes a model whom objective is the prediction of users' location at different granularities. The dataset for this model is consisted of 1,524,522 tweets from 9551 users. The tools for collecting the data are the Google's geocoding API, Twitter's rest API and Twitter's streaming API. The next step is the severance of the techniques to some basic categories.
+A number of different kind of techniques havde been recently proposed. \cite{mahmud2012tweet} propose a model whom objective is the prediction of users' location at different granularities. The dataset for this model is consisted of 1,524,522 tweets from 9551 users. The tools for collecting the data are the Google's geocoding API, Twitter's rest API and Twitter's streaming API. The next step is the severance of the techniques to some basic categories.
 
 \vspace{3mm}
 \textbf{Content-based Statistical Classifiers}
 \vspace{3mm}
 
-In this part, three different models are trained. The first one uses all the words contained in S. The second one uses all hashtags that are included in S. The last one, uses all the place names that S contains. Originally, there is a feature selection step different at each case. For the words the algorithm keeps only the nouns. For the hashtags, the algorithm keeps only the words that start with . The place names approach keeps only the terms that appear in the tweets and match names of US cities and states from the USGS gazetteer. Next step is the identification of terms that are particularly discriminative for a location. The last step is the training and classification where using Weka they select Naive Bayes Multimonial algorithm.
+In this part, three different models are trained. The first one uses all the words contained in S. The second one uses all hashtags that are included in S. The last one, uses all the place names that S contains. Originally, there is a feature selection step different at each case. For the words the algorithm keeps only the nouns. For the hashtags, the algorithm keeps only the words that start with . The place names approach keeps only the terms that appear in the tweets and match names of US cities and states from the USGS gazetteer. Next step is the identification of terms that are particularly discriminative for a location. The last step is the training and classification where using Weka they select Naïve Bayes Multimonial algorithm.
 
 \vspace{3mm}
 \textbf{Content-based Heuristics Classifiers}
@@ -416,7 +416,7 @@ In this part, three different models are trained. The first one uses all the wor
 \end{itemize}
 
 The heuristic is that a user would mention his or her home city or state in tweets more often than any other cities or states.
-	
+
 \begin{itemize}
 	\item Visit Place Heuristic Classifier
 \end{itemize}
@@ -427,17 +427,72 @@ The heuristic is that a user would visit places in his home location more often 
 \textbf{Ensemble of Location Classifiers}
 \vspace{3mm}
 
- The main idea in this part is a dynamically weighted ensemble of statistical and heuristic classifiers. In this part it is introduced the Classification Strength metric. According to this, let T denote the set of terms from user's tweets that would be considered for classification using a particular classifier. For statistical classifiers, the matching location distribution is the set of locations in our trained model containing terms from T. For the local-place classifier, this distribution contains locations from our dataset that match content in the user's tweets. For the visit-history classifier, this distribution contains locations from the user's visit history that appear in our dataset. The Classification Strength for a user is the inverse of the number of matching locations in the matching location distribution. In this approach, the Classification Strength of a classifier for a particular instance is used as the weight of that classifier in the ensemble (for classifying that instance) and the location with the highest rank by weighted linear combination is returned as the result.
- 
- For the evaluation of the classifiers, the evaluating technique is the Recall(R). The best algorithm was the Place Name Statistical Classifier. The high recall of the place name-based classifier may be explained by the fact that many users send tweets containing names of places (cities and states in our system), and those place names tend to have bias towards users' home cities.
+The main idea in this part is a dynamically weighted ensemble of statistical and heuristic classifiers. In this part it is introduced the Classification Strength metric. According to this, let T denote the set of terms from user’s tweets that would be considered for classification using a particular classifier. For statistical classifiers, the matching location distribution is the set of locations in our trained model containing terms from T. For the local-place classifier, this distribution contains locations from our dataset that match content in the user’s tweets. For the visit-history classifier, this distribution contains locations from the user’s visit history that appear in our dataset. The Classification Strength for a user is the inverse of the number of matching locations in the matching location distribution. In this approach, the Classification Strength of a classifier for a particular instance is used as the weight of that classifier in the ensemble (for classifying that instance) and the location with the highest rank by weighted linear combination is returned as the result.
+
+For the evaluation of the classifiers, the evaluating technique is the Recall(R). The best algorithm was the Place Name Statistical Classifier. The high recall of the place name-based classifier may be explained by the fact that many users send tweets containing names of places (cities and states in our system), and those place names tend to have bias towards users’ home cities.
 
 \subsection{Network-based Geoinference}
 
-The interest in creating new algorithms for geoinference prediction has shown a great increase. A lot of new algorithms that promise great results have been detected\cite{jurgens2015geolocation}. However, the conditions under the conclusions was assembled are controversial. The objective of this subsection is the assessment of the state-of-art techniques. The three evaluating criteria are (1) the accuracy of each algorithm in real-world conditions, (2) the impact of how ground truth is determined for training, and (3) the relationship between performance and time as models infer the locations of posts created after the model was trained. Below is the description of the 9 methods: 
+The interest in creating new algorithms for geoinference prediction has shown a great increase. A lot of new algorithms that promise great results have been detected\cite{jurgens2015geolocation}. However, the conditions under the conclusions was assembled are controversial. The objective of this subsection is the assessment of the state-of-art techniques. The three evaluating criteria are the accuracy of each algorithm in real-world conditions, (2) the impact of how ground truth is determined for training, and (3) the relationship between performance and time as models infer the locations of posts created after the model was trained. Below is the description of the 9 methods: 
 
 \textbf{Backstrom, Sun, and Marlow (2010)} presented a model using Facebook. In this model this algorithm demands from the users to dispose highly-precised locations. The main idea of this method is the building of a probabilistic model representing the likelihood of observing a relationship between two users given the geographic distance between them. They achieved a complexity of O(|V|k2 ) where V is the number of vertices in the graph and k is the average number of vertex neighbors with known locations.
 
+\textbf{McGee, Caverlee, and Cheng (2013)} proposed a method citing the difficulties adapting from Facebook to Twitter. The technique is a tree regression model that predicts the actual distance between the users. However, as the size of the network grows, computing the regression model on all pairs of located user dominates the run-time making the algorithm infeasible in practice.
 
+\textbf{Kong, Liu, and Huang (2014)} proposes several extensions to the Backstrom, Sun, and Marlow (2010) model based on strategies for weighting which of a user’s friends are likely to be most predictive of their location.This method uses the friendship definition of Huberman, Romero, and Wu (2009) which is that a user a is friends with b if a has mentioned b in at least two posts. Given a user, their friends are weighted according to a social tightness coefficient, which is computed as the cosine similarity of the two user’s friends.
+
+\textbf{Li et al. (2012)} proposes to infer geolocation by taking into account the influence of both users and of locations, capturing the intuition that some users are more informative for predicting the locations of the neighbors.The best-performing of their approaches first assigns users to random locations and then iteratively updates the locations of users from their neighbors and mentioned location names, refining the parameters in the update by measuring the prediction error of users with already-known locations.
+
+\textbf{Li, Wang, and Chang (2012)} recognize that a user may relocate over the course of their social media history and therefore may have more than one home location from which they posts. To uncover all of a user’s home locations, relationships between users and locations are modeled with a supervised extension to Latent Dirichlet Allocation (Blei, Ng, and Jordan 2003).
+
+\textbf{Rout et al. (2013)} approach geolocation inference as a classification task. a SVM classifier was trained with three core features: (1) the cities of a user’s friends, relative to the city’s respective number of Twitter users, (2) the number of closed triads in a user’s social network residing in the same city, and (3) the number of reciprocal following relationships a user has per city.
+
+\textbf{Davis Jr et al. (2011)} propose one of the simplest approaches where given a user, their location is inferred by
+taking the most-frequently seen location among their social network.
+
+\textbf{Jurgens (2013)} extends the idea of location inference as label propagation by interpreting location labels spatially. Locations are inferred using an iterative, multi-pass procedure. Like Kong, Liu, and Huang (2014), during one pass, the location of each user is assigned as the geometeric median of the locations of all the user’s neighbors, with groundtruth data providing the locations for the first pass.
+
+\textbf{Compton, Jurgens, and Allen (2014)} extend the method of Jurgens (2013) to take into account edge weights in the social network and to limit the propagation of noisy locations.
+
+\textbf{Evaluation Phase}\\
+The evaluation criteria by which methods should be measured are three: (1) accurate inference of a post’s location, (2) accurate inference of all the posts generated by a user, and (3) maximizing the number of posts whose location is able to be inferred. The metrics that are used for the evaluation of the techniques are three, too. Specifically, AUC, Post Coverage and Median-Max.
+
+The first(cross-validation) experiment is an evaluation of all nine methods and the baseline in a common setting, on identical data, using consistent sources of ground truth, and measuring performance with the proposed evaluation metrics. 
+
+\begin{figure}[h!]
+	\includegraphics[scale=0.47]{cross-validation}
+	\centering
+	\caption{Performance during cross-validation of the training
+		data, using either GPS-based or Geonames-based sources of
+		ground truth.}
+	\label{fig:cross}
+\end{figure}
+
+The second(Self-reported Locations) experiment tests the performance impact of gazetteer choice using four large gazetteers: Geonames, GeoLite, DBpedia, and Google. 
+
+\begin{figure*}[h!]
+	\includegraphics[width=\textwidth]{self-reported}
+	\centering
+	\caption{System performance when varying the gazetteer used to identify self-reported locations.}
+	\label{fig:reported}
+\end{figure*}
+
+The last(Temporal Decay) experiment evaluates how each geoinference method changes in accuracy and coverage when predicting locations for novel Twitter data created at increasingly-distant points in time after the last date seen in the training data. Further, this experiment examines the degree to which cross-validation performance is predictive of future performance by the models.
+
+\begin{figure}[h]
+	\includegraphics[scale=0.5]{temporaldecay}
+	\centering
+	\caption{Performance on each day of the test data.}
+	\label{fig:temporal}
+\end{figure}
+
+\subsection{Prediction with Social and Spatial Proximity}
+
+The objective of this subsection is the introduction of an algorithm that predicts the location of an individual from a sparse set of located users with peformance that exceeds IP-based geolocation\cite{backstrom2010find}.
+
+It is observed that the likelihood of friendship with a person is decreasing with distance. This should not be surprising given that we are less likely to meet people who live further away. A less obvious relationship is that the total number of friends also tends to decrease as distance increases. This means that the probability of knowing someone d miles away is decreasing faster than the total number of people d miles away is increasing.
+
+Τhe model that is proposed finds that using a maximum likelihood approach with the simplifying assumption that the user will be either colocated or in close proximity to one of her friends, it is able to predict the physical location of 69.1 of the users with 16 or more located friends to within 25 miles, compared to only 57.2 using IP-based methods. The next step is to try with even more social data. The content of this data is how often users interact with each other and see each other’s content. Using this data generates slight improvement in geolocation, which implies that users who are physically close to each other may tend to interact more often on Facebook. The last step is to iterate the maximum-likelihood algorithm. The reason is to increase the accuracy of prediction of many individuals at once. This showed significant improvement in the accuracy.
 
 %ACKNOWLEDGMENTS are optional
 \section{Acknowledgments}
